feat: PC 에이전트용 Google OAuth client-id를 audience 목록에 추가